k8s/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-experiment-deployment-frontend
  labels:
    app: k8s-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-frontend
  template:
    metadata:
      labels:
        app: k8s-frontend
    spec:
      containers:
        - name: k8s-frontend
          image: ghcr.io/roelofr/k8s-experiment/frontend-app:edge
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: ghcr
