k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-backend-service
spec:
  selector:
    app: k8s-backend
  ports:
    - protocol: TCP
      port: 80
  type: LoadBalancer
