k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-frontend-service
spec:
  selector:
    app: k8s-frontend
  ports:
    - protocol: TCP
      port: 80
  type: LoadBalancer
