k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-backend-service
spec:
  selector:
    app: k8s-backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
