k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-frontend-service
spec:
  selector:
    app: k8s-experiment
  type: NodePort
  ports:
    - protocol: TCP
      port: 8081
      name: http
