k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-experiment-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: k8s-backend-service
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-frontend-service
                port:
                  name: http
